Improve efficiency by reducing repeated upper-casing of column names